apis/novelcovid/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.prod.yml
    kompose.version: 1.21.0 ()
  creationTimestamp: null
  labels:
    io.kompose.service: app
  name: app
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: app
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.prod.yml
        kompose.version: 1.21.0 ()
      creationTimestamp: null
      labels:
        io.kompose.service: app
    spec:
      containers:
      - name: covid-api-server
        args:
        - npm
        - start
        env:
        - name: APPLE_INTERVAL
          value: "864e5"
        - name: INTERVAL
          value: "6e5"
        - name: NYT_INTERVAL
          value: "864e5"
        - name: REDIS_HOST
          value: redis
        - name: REDIS_PASSWORD
          value: '"7nS&01Q#w%eE"'
        - name: REDIS_PORT
          value: "6379"
        - name: SERVER_PORT
          value: "3000"
        image: novelcovid/novelcovid-api:latest
        imagePullPolicy: "Always"
        ports:
        - containerPort: 3000
        resources: {}
      - name: novelcovid-proxy
        image: "docker-dev.production.deciphernow.com/deciphernow/gm-proxy:1.4.1-dev"
        imagePullPolicy: IfNotPresent      
        resources: {}
        args:
          - -c
          - /etc/greymatter/config.yaml
        command:
          - /app/gm-proxy
        ports:
          - name: metrics
            containerPort: 8080
          - name: sidecar
            containerPort: 8443
        env:
          - name: ENVOY_LOG_LEVEL
            value: "debug"
        volumeMounts:
          - name: sidecar-config
            mountPath: /etc/greymatter
            readOnly: true
          - name: spire-socket
            mountPath: /run/spire/sockets
            readOnly: false
      imagePullSecrets:
        - name: docker-dev.production.deciphernow.com
      volumes:
        - name: spire-socket
          hostPath:
            path: /run/spire/sockets
            type: DirectoryOrCreate
        - name: sidecar-config
          configMap:
            name: novelcovid-sidecar
      restartPolicy: Always
      serviceAccountName: "apis-sa"
