apis/novelcovid/novelcovid.api.deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    fluxcd.io/automated: "true"
    fluxcd.io/tag.server: glob:sha-* # Matches github commit hash
    fluxcd.io/tag.sidecar: glob:1.4.2*
  labels:
    app: novelcovid
    cluster: apis.novelcovid
  name: novelcovid.api
  namespace: apis
spec:
  replicas: 7
  selector:
    matchLabels:
      app: novelcovid
      cluster: apis.novelcovid
  strategy: {}
  template:
    metadata:
      labels:
        app: novelcovid
        cluster: apis.novelcovid
    spec:
      containers:
      - name: server
        args:
        - npm
        - start
        env:
        - name: APPLE_INTERVAL
          value: "864e5"
        - name: INTERVAL
          value: "6e5"
        - name: NYT_INTERVAL
          value: "864e5"
        - name: REDIS_HOST
          value: novelcovid-redis.dvd05s.0001.use1.cache.amazonaws.com
        - name: REDIS_PORT
          value: "6379"
        - name: SERVER_PORT
          value: "3000"
        - name: MAILGUN_API_KEY
          valueFrom:
            secretKeyRef:
              name: api-secret
              key: MAILGUN_API_KEY
        - name: CAPTCHA_SECRET
          valueFrom:
            secretKeyRef:
              name: api-secret
              key: CAPTCHA_SECRET
        image: novelcovid/novelcovid-api:sha-7c2e8c1
        imagePullPolicy: "Always"
        ports:
        - containerPort: 3000
        resources:
          limits:
            cpu: 500m
            memory: 1Gi
          requests:
            cpu: 100m
            memory: 200Mi
      - name: sidecar
        image: "docker-dev.production.deciphernow.com/deciphernow/gm-proxy:1.4.2"
        imagePullPolicy: IfNotPresent
        resources:
          limits:
            cpu: 500m
            memory: 512Mi
          requests:
            cpu: 100m
            memory: 128Mi
        args:
        - -c
        - /etc/greymatter/config.yaml
        command:
        - /app/gm-proxy
        ports:
        - name: metrics
          containerPort: 8080
        - name: sidecar
          containerPort: 8443
        volumeMounts:
        - name: sidecar-config
          mountPath: /etc/greymatter
          readOnly: true
        - name: spire-socket
          mountPath: /run/spire/sockets
          readOnly: false
      imagePullSecrets:
      - name: docker-dev.production.deciphernow.com
      volumes:
      - name: spire-socket
        hostPath:
          path: /run/spire/sockets
          type: DirectoryOrCreate
      - name: sidecar-config
        configMap:
          name: novelcovid-sidecar
      restartPolicy: Always
      serviceAccountName: "apis-sa"
