apis/novelcovid/novelcovid.api.sidecar.configmap.yaml
---
apiVersion: v1
kind: ConfigMap
metadata:
  name: novelcovid-sidecar
  namespace: apis
data:
  config.yaml: |-
    node:
      id: "default"
      cluster: "apis.novelcovid"
      locality:
        zone: default.zone
        region: default.region
    dynamic_resources:
      ads_config:
        api_type: GRPC
        grpc_services:
          envoy_grpc:
            cluster_name: xds_cluster
      cds_config:
        ads: {}
      lds_config:
        ads: {}
    static_resources:
    
      listeners:
        # Address and port where the sidecar proxy listens
        name: sidecar:8443
        address:
          socket_address:
            address: 0.0.0.0
            port_value: 8443
        filter_chains:
        - filter_chain_match: {}
          filters:
          - name: envoy.http_connection_manager
            typed_config:
              "@type": type.googleapis.com/envoy.config.filter.network.http_connection_manager.v2.HttpConnectionManager
              stat_prefix: sidecar
              codec_type: auto
              route_config:
                name: sidecar
                virtual_hosts:
                - name: '*-8443'
                  domains:
                  - '*'
                  routes:
                  - match:
                      prefix: "/"
                    route:
                      prefix_rewrite: "/"
                      cluster: local
                      timeout: 3s
              http_filters:
              - name: envoy.cors
                typed_config: {}
              - name: envoy.router
                typed_config: {}
              access_log:
              - name: envoy.file_access_log
                typed_config:
                  '@type': type.googleapis.com/envoy.config.accesslog.v2.FileAccessLog
                  path: /dev/stdout
      clusters:
        - name: xds_cluster
          connect_timeout: 0.25s
          http2_protocol_options: {}
          type: STRICT_DNS
          lb_policy: ROUND_ROBIN
          load_assignment:
            cluster_name: xds_cluster
            endpoints:
              - lb_endpoints:
                - endpoint:
                    address:
                      socket_address:
                        address: control.fabric.svc.cluster.local
                        port_value: 8443
          tls_context:
            common_tls_context:
              tls_certificate_sds_secret_configs:
                - name: "spiffe://covidapihub.io/ns/apis/sa/apis-sa"
                  sds_config:
                    api_config_source:
                      api_type: GRPC
                      grpc_services:
                        envoy_grpc:
                          cluster_name: spire_agent
              tls_params:
                ecdh_curves:
                  - X25519:P-256:P-521:P-384
              combined_validation_context:
                default_validation_context:
                  verify_subject_alt_name:
                    - "spiffe://covidapihub.io/ns/fabric/sa/control"
                validation_context_sds_secret_config:
                  name: "spiffe://covidapihub.io"
                  sds_config:
                    api_config_source:
                      api_type: GRPC
                      grpc_services:
                        envoy_grpc:
                          cluster_name: spire_agent
        - name: spire_agent
          connect_timeout: 0.25s
          http2_protocol_options: {}
          type: STATIC
          lb_policy: ROUND_ROBIN
          load_assignment:
            cluster_name: spire_agent
            endpoints:
              - lb_endpoints:
                - endpoint:
                    address:
                      pipe:
                        path: /run/spire/sockets/agent.sock
        - name: local
          connect_timeout: 0.25s
          common_http_protocol_options:
            idle_timeout: 10s
          http2_protocol_options: {}
          type: STATIC
          lb_policy: round_robin
          circuit_breakers:
            thresholds:
              - priority: DEFAULT
                max_connections: 1000000000
                max_pending_requests: 1000000000
                max_requests: 1000000000
                max_retries: 1000000000
              - priority: HIGH
                max_connections: 1000000000
                max_pending_requests: 1000000000
                max_requests: 1000000000
                max_retries: 1000000000
          load_assignment:
            cluster_name: local
            endpoints:
            - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: 127.0.0.1
                      port_value: 3000 
    admin:
      access_log_path: /dev/stdout
      address:
        socket_address:
          address: 127.0.0.1
          port_value: 8001
