apis/novelcovid/novelcovid.scraper.deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    fluxcd.io/automated: "true"
    fluxcd.io/tag.scraper: glob:sha-* # Matches github commit hash
  name: novelcovid.scraper
  namespace: apis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: novelcovid.scraper
      cluster: apis.novelcovid.scraper
  strategy: {}
  template:
    metadata:
      labels:
        app: novelcovid.scraper
        cluster: apis.novelcovid.scraper
    spec:
      containers:
      - args:
        - npm
        - run
        - start:scraper
        env:
        - name: APPLE_INTERVAL
          value: "864e5"
        - name: INTERVAL
          value: "6e5"
        - name: NYT_INTERVAL
          value: "864e5"
        - name: REDIS_HOST
          value: redis
        - name: REDIS_PASSWORD
          valueFrom:
            secretKeyRef:
              name: redis
              key: password
        - name: REDIS_PORT
          value: "6379"
        - name: SERVER_PORT
          value: "3000"
        - name: MAILGUN_API_KEY
          valueFrom:
            secretKeyRef:
              name: api-secret
              key: MAILGUN_API_KEY
        - name: CAPTCHA_SECRET
          valueFrom:
            secretKeyRef:
              name: api-secret
              key: CAPTCHA_SECRET
        image: novelcovid/novelcovid-api:sha-ce8c324
        imagePullPolicy: "Always"
        name: scraper
        ports:
        - containerPort: 3000
        resources:
          limits:
            cpu: 1
            memory: 1Gi
          requests:
            cpu: 200m
            memory: 200Mi
      restartPolicy: Always
      serviceAccountName: "apis-sa"
status: {}
