apis/novelcovid/redis.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: apis
spec:
  ports:
  - name: redis
    port: 6379
    targetPort: 6379
    protocol: TCP
  selector:
    cluster: apis.novelcovid.redis
status:
  loadBalancer: {}
